@@ -36,7 +36,7 @@ slurs and beams are sloped, <em>automatically</em>!
 All style settings, font designs and algorithms have been inspired by
 the finest hand-engraved music. LilyPond output has that same strong
 and balanced look as a classical scores. (<a
-href="../about/essay/typographical-features.html">more</a>)
+href="../about/automated-engraving/typography-features.html">more</a>)
 
 
 <h2>Libre software</h2>
@@ -51,9 +51,6 @@ source code, and permission to change and copy it. So, are you
 irritated by a bug, or yearning for a feature?  Simply add it
 yourself, or pay someone else to do it.
 
-
-
-
 <h2>Extensible design</h2>
 <p>
 All settings can be changed to suit your personal typographical
@@ -62,16 +59,11 @@ scripting language, a dialect of the powerful language LISP.
 Settings, variables and functions are all documented in the
 comprehensive program reference manual.
 
-<h2>Runs on your platform</h2>
-
-LilyPond runs on all popular platforms: Linux, MacOS X, and Windows.
-If there is no precompiled package available, then you can always
-compile LilyPond from source.
-
 <h2>Excellent support</h2>
 
-LilyPond comes with a 230 page manual and 400 example files. There is
-an active user community answering questions on the <a
+LilyPond runs on all popular platforms: Linux, MacOS X, and Windows.
+LilyPond comes with a 230 page user manual and 400 example
+files. There is an active user community answering questions on the <a
 href="http://news.gmane.org/gmane.comp.gnu.lilypond.general">Lilypond
 user</a> mailing list, while the <a
 href="../about/thanks.html">development team</a> makes sure that
